Critical Fix: copy button outside fullscreen selector
- the last changed didn't work because it was checking for the next sibling using '+', but the fullscreen button is actually placed before the copy button.
- makes macOS scrollbar thin

--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -78,6 +78,7 @@ body:has(.VPFooter:not(.has-sidebar)) .aside-container {
 }
 
 html.mac {
+  scrollbar-width: thin;
   scrollbar-color: var(--vp-c-gray-1) var(--vp-c-bg-alt);
 }
 
